[metadata]
name = ScalaJVMInitializer
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/ScalaJVMInitializer.py
description = A library complementing JAbs for doing some useful things with Scala.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = java, JVM, GraalVM, GraalPython, Scala
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires = 
	JAbs @ git+https://github.com/KOLANICH/JAbs.py.git
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
